[workspace]

[package]
name = "rust_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
sdk = { path = "../../sdk" }


actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoincore-rpc = "0.16"
serial_test = "0.5.1"
borsh = "0.10"

